@@ -19,7 +19,6 @@
 **/
 ?>
 <?php
-
 require_once "include/config.inc.php";
 require_once "include/forms.inc.php";
 
